styles/_base.scss
body {
  padding: 1rem;
}

h1, h2, h3, h4, h5, h6 {
  font-size: $font-size-large;
}

footer {
  text-align: center;
  font-size: $font-size-small;
}

blockquote {
  font-style: italic;
  border-left: 2px solid black;
  padding-left: 8px;
}

aside {
  font-style: italic;
  font-size: $font-size-small;
  line-height: 1.6rem; // TODO: Figure out why this has to be 1.6
  display: block;
  float: left;
  margin-left: -160px;
  text-align: right;
  width: calc(160px - 1rem);

  @media (max-width: calc($site-width + 260px)) {
    display: none;
  }
}

pre {
  overflow-x: scroll;
}

.sitewrapper {
  max-width: $site-width;
  margin: 0 auto;
}

main {
  @include stack;
}

.skip-link {
  position: absolute;
  top: 0;
  transform: translateY(-100%);
}

.skip-link:focus {
  transform: translateY(0);
}

.footnotes {
  font-size: $font-size-small;
  padding-top: 1rem;
}

